<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:titleTextAppearance="@style/TextContent.AppBar"
            app:title="@string/about" />

    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_about"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/fadhlan_square"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_about_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/about_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/img_about"
        app:layout_constraintStart_toStartOf="@+id/img_about"
        app:layout_constraintTop_toBottomOf="@+id/img_about" />

    <TextView
        android:id="@+id/tv_about_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lato_light"
        android:text="@string/about_email"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_about_name"
        app:layout_constraintStart_toStartOf="@+id/tv_about_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_name" />

    <TextView
        android:id="@+id/tv_about_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato"
        android:text="@string/about_desc"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_email" />

</androidx.constraintlayout.widget.ConstraintLayout>